# pepe-rust-bot

./: Cargo.toml  README.md  owo.json
src/: custom_error.rs  discord_client.rs  discord_client.rs.dis  discord_client_sync.rs  discord_commands.rs  discord_message.rs  main.rs  model.rs
