[package]
edition = "2021"
name = "pepe-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio = {version = "1.16.1", features = ["full"]}
dotenv = "0.15.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_repr = "0.1.7"
tokio-tungstenite = {version = "0.17.1", features = ["native-tls"]}
futures-util = "0.3.21"
reqwest = { version = "0.11.9", features = ["json"] }
regex = "1.5.4"
rand = "0.8.5"