[package]
edition = "2021"
name = "pepe-bot"
version = "0.1.0"

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
dotenv = "0.15.0"
futures = "0.3.21"
futures-util = "0.3.21"
tokio = {version = "1.16.1", features = ["full"]}
tokio-tungstenite = {version = "0.17.1", features = ["native-tls"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_repr = "0.1.7"
reqwest = { version = "0.11.9", features = ["json"] }
clap-verbosity-flag = "1.0.0"
async-channel = "1.6.1"
clap = { version = "3.1.3", features = ["derive", "env"] }
regex = "1.5.4"
rand = "0.8.5"